Fix blue eventcard text on Safari Mobile

--- a/src/components/events/EventCard/style.module.scss
+++ b/src/components/events/EventCard/style.module.scss
@@ -2,6 +2,7 @@
   background: transparent;
   border: 1px solid var(--theme-primary-6);
   border-radius: 10px;
+  color: currentColor;
   -ms-overflow-style: none;
   overflow-x: hidden;
   padding: 0;
